[package]
name = "luigi_flowey"
version = "0.1.0"
edition = "2021"


[dependencies]
hound = "3.5.1"
raylib = "5.0.2"
rustfft = "6.2.0"
rand = "0.8.5"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
